--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
             "homepage": "https://jungleminds.com"
         }
     ],
+    "require": {
+      "craftcms/cms": "^3.0.0",
+    },
     "autoload": {
         "psr-4": {
           "jungleminds\\nethooks\\": "src/"
