--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "jungleminds/nethooks",
     "description": "Add Deploy hooks for Netlify",
     "type": "craft-plugin",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "keywords": [
         "craft",
         "cms",
@@ -21,6 +21,9 @@
             "homepage": "https://jungleminds.com"
         }
     ],
+    "require": {
+      "craftcms/cms": "^3.0.0"
+    },
     "autoload": {
         "psr-4": {
           "jungleminds\\nethooks\\": "src/"
